Master fails to compile with VS after latest master update #51536

Closed
opened 2017-05-17 16:58:25 +02:00 by James W E Bird · 10 comments

System Information
Win 10 x64, AMD FirePro W9100

Blender Version
Master Today after Denoise updates

Short description of error

VS gives compile errors after most recent master update as follow:

C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(391): error C2668: 'fpclassify': ambiguous call
to overloaded function [C:\Blender-Git\build_windows_Release_x64_vc14_Release\intern\cycles\render\cycles_render.vcxpr
oj]

C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(288): note: could be 'int fpclassify(long dou
ble) throw()'
C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(283): note: or       'int fpclassify(double)
throw()'
C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(278): note: or       'int fpclassify(float) t
hrow()'
C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(391): note: while trying to match the argumen
t list '(ccl::uchar)'
C:\Blender-Git\blender\intern\cycles\render\image.cpp(651): note: see reference to function template instantiation 'b
ool isfinite<StorageType>(_Ty) throw()' being compiled
        with
        [
            StorageType=ccl::uchar,
            _Ty=ccl::uchar
        ]
**System Information** Win 10 x64, AMD FirePro W9100 **Blender Version** Master Today after Denoise updates **Short description of error** VS gives compile errors after most recent master update as follow: C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(391): error C2668: 'fpclassify': ambiguous call to overloaded function [C:\Blender-Git\build_windows_Release_x64_vc14_Release\intern\cycles\render\cycles_render.vcxpr oj] ``` C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(288): note: could be 'int fpclassify(long dou ble) throw()' C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(283): note: or 'int fpclassify(double) throw()' C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(278): note: or 'int fpclassify(float) t hrow()' C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt\math.h(391): note: while trying to match the argumen t list '(ccl::uchar)' C:\Blender-Git\blender\intern\cycles\render\image.cpp(651): note: see reference to function template instantiation 'b ool isfinite<StorageType>(_Ty) throw()' being compiled with [ StorageType=ccl::uchar, _Ty=ccl::uchar ]
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JamesBird

Added subscriber: @JamesBird
Sergey Sharybin was assigned by James W E Bird 2017-05-17 17:04:03 +02:00

Will have a look, but keep in mind the following snippet from the report guidelines:

What not to report here
  • Compile or build issues, ask on #blendercoders or mail bf-committers
Will have a look, but keep in mind the following snippet from the report guidelines: ``` What not to report here ``` * Compile or build issues, ask on #blendercoders or mail bf-committers

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by blender/cycles@69b50f6f84

This issue was referenced by blender/cycles@69b50f6f8405bf008040bf51de9173d9638328e6

This issue was referenced by 9a910443c4

This issue was referenced by 9a910443c471a9059423fbd24b41c11e7fd9e98e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Ahhh OK, Sorry Sergey ill keep that in mind in future. Thought i was doing the right thing.

Ahhh OK, Sorry Sergey ill keep that in mind in future. Thought i was doing the right thing.

It is more efficient if this is communicated in IRC or ML: we don't constantly monitor the tracker so was like a good luck i saw this report. Poking in IRC works always.

It is more efficient if this is communicated in IRC or ML: we don't constantly monitor the tracker so was like a good luck i saw this report. Poking in IRC works always.
Author

Cool, Will do in future. Keep up the great work.

Cool, Will do in future. Keep up the great work.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#51536
No description provided.