Fix compilation error in Cycles

Was caused by recent fix with finite checks.

Fixes T51536.